--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<app-navbar></app-navbar>
+
 <router-outlet></router-outlet>
+
+<div class="bg-primary text-white text-center p-1 fixed-bottom">
+    &copy; Esther Herrera
+</div>
