problema solucionado del linkeo

--- a/src/app/pages/patients/details-patient/details-patient.component.html
+++ b/src/app/pages/patients/details-patient/details-patient.component.html
@@ -26,8 +26,8 @@
     <h6>Seguro Médico: {{patientsService.patientSelected$.value.medicalInsurance}}</h6>
 
     <div class=" d-flex justify-content-around my-3 ">
-        <a routerLink="/list-vitals/1 " class="info ">Signos Vitales</a> &nbsp;
-        <a routerLink="/list-consultations/1 " class="info ">Consultas</a>
+        <a routerLink="list-vitals/0" class="info ">Signos Vitales</a> &nbsp;
+        <a routerLink="list-consultations/0" class="info ">Consultas</a>
     </div>
 
 </div>
