--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/list-patients/0">Hospital-App</a>
+    <div class="container-fluid ">
+        <a class="navbar-brand text-white" routerLink="/list-patients/0">Hospital-App</a>
         <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" routerLink="/list-patients/0">Home</a>
+            <a class="nav-link active text-white" aria-current="page" routerLink="/list-patients/0">Home</a>
+            <a class="nav-link active text-white" aria-current="page" routerLink="about">about</a>
         </div>
 
     </div>
